// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/basic.vue 1`] = `
"import { getCurrentInstance, defineComponent } from 'vue';
import { useVModel } from '@vueuse/core';

var _DM_useVModel = (...keys) => {
  const props = getCurrentInstance().proxy.$props;
  const ret = {};
  for (const _k of keys) {
    if (typeof _k === 'string') {
      ret[_k] = useVModel(props, _k, undefined, {
        eventName: \`update:\${_k}\`,
        passive: true,
      });
    } else {
      const [key, prop = key, eventName = \`update:\${key}\`, options = {}] = _k;
      ret[key] = useVModel(props, prop, undefined, {
        eventName,
        passive: true,
        ...options,
      });
    }
  }
  return ret
};

const name = \\"Foo\\";
const __default__ = defineComponent({
  name
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  props: {
    \\"modelValue\\": { type: String, required: true },
    \\"title\\": { type: String, required: true }
  },
  emits: [\\"update:modelValue\\", \\"change\\"],
  setup(__props, { emit }) {
    let { modelValue } = _DM_useVModel(\\"modelValue\\");
    const handleClick = () => {
      emit(\\"change\\");
      modelValue.value = \\"hello, \\" + __props.title;
    };
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/case-233.vue 1`] = `
"import { defineComponent } from 'vue';

const msg = \\"Hello\\";
var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"case-233\\",
  props: {
    \\"msg\\": { type: String, required: true, default: msg }
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var case233 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { case233 as default };
"
`;

exports[`fixtures > tests/fixtures/define-props-refs.vue 1`] = `
"import { defineComponent, toRefs } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"define-props-refs\\",
  props: {
    \\"foo\\": { type: String, required: true }
  },
  setup(__props) {
    const __MACROS_props = __props;
    const { foo } = toRefs(__MACROS_props);
    console.log(foo.value);
    foo.value = \\"hello\\";
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var definePropsRefs = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { definePropsRefs as default };
"
`;

exports[`fixtures > tests/fixtures/hoist-static.vue 1`] = `
"import { defineComponent } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

const name = 'App';
const propName = 'title';
const __default__ = defineComponent({
  name,
});
const _sfc_main = /*#__PURE__*/Object.assign(__default__, {
  props: [propName],
  setup(__props) {







return () => {}
}

});
var hoistStatic = /*#__PURE__*/_export_sfc(_sfc_main, [__FILE__]);

export { hoistStatic as default };
"
`;

exports[`fixtures > tests/fixtures/hoist-static-scope.vue 1`] = `
"import { defineComponent, openBlock, createElementBlock } from 'vue';

const [name] = (
  /* hoist-static*/
  [\\"VarCompName\\"]
);
const __default__ = defineComponent({
  name
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  setup(__props) {
    const test = (name2) => name2;
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, \\"1\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var hoistStaticScope = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { hoistStaticScope as default };
"
`;

exports[`fixtures > tests/fixtures/short-emits.setup.tsx 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"short-emits.setup\\",
  emits: [\\"update:modelValue\\"],
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var shortEmits_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { shortEmits_setup as default };
"
`;

exports[`fixtures > tests/fixtures/vue2-model.vue 1`] = `
"import { getCurrentInstance, defineComponent } from 'vue';
import { useVModel } from '@vueuse/core';

var _DM_useVModel = (...keys) => {
  const props = getCurrentInstance().proxy.$props;
  const ret = {};
  for (const _k of keys) {
    if (typeof _k === 'string') {
      ret[_k] = useVModel(props, _k, undefined, {
        eventName: \`update:\${_k}\`,
        passive: true,
      });
    } else {
      const [key, prop = key, eventName = \`update:\${key}\`, options = {}] = _k;
      ret[key] = useVModel(props, prop, undefined, {
        eventName,
        passive: true,
        ...options,
      });
    }
  }
  return ret
};

const __default__ = defineComponent({
  name: \\"Foo\\",
  model: {
    prop: \\"value\\",
    event: \\"changeInput\\"
  }
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  props: {
    \\"value\\": { type: String, required: true },
    \\"title\\": { type: String, required: true }
  },
  emits: [\\"input\\", \\"changeInput\\", \\"change\\"],
  setup(__props, { emit }) {
    let { modelValue, value } = _DM_useVModel([\\"modelValue\\", \\"value\\", \\"input\\"], [\\"value\\", void 0, \\"changeInput\\"]);
    const handleClick = () => {
      emit(\\"change\\");
      modelValue.value = \\"hello, \\" + __props.title;
      value.value = \\"Word,\\" + __props.title;
    };
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var vue2Model = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vue2Model as default };
"
`;
